# alshicrypt-multimodal

./: .gitignore  README.md  dev.ipynb  pyproject.toml  requirements.txt  sample.py  train.py
samples/audio/wav/: .gitignore
src/alshicrypt/: __init__.py  data.py  generate.py  model.py  transforms.py
