[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alshicrypt"
version = "0.1.0"
description = "Multimodal encryption experiment toolkit"
authors = [{name = "Alshival"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.1+cpu",
    "torchvision==0.24.1+cpu",
    "torchaudio==2.9.1+cpu",
    "pillow==12.0.0",
    "numpy==2.3.5",
    "soundfile==0.13.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
